--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
+    "postbuild": "node swagger.js",
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "pretest": "jest --clearCache",
@@ -35,6 +36,7 @@
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "supertest": "^6.3.1",
+    "swagger-autogen": "^2.22.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
