--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "color-string": "^1.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/color-string": "^1.5.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
