--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postbuild": "node swagger.js",
     "prestart": "npm run build",
     "start": "node dist/index.js",
+    "watch": "nodemon src/index.ts",
     "pretest": "jest --clearCache",
     "test": "jest --forceExit --detectOpenHandles --verbose",
     "coverage": "jest --silent --coverage"
@@ -17,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "cheerio": "^1.0.0-rc.12",
     "color-string": "^1.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -28,6 +31,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/color-string": "^1.5.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
@@ -37,6 +41,7 @@
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "supertest": "^6.3.1",
     "swagger-autogen": "^2.22.0",
     "ts-jest": "^29.0.3",
