--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.6.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1",
