--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
+    "selenium-webdriver": "^4.6.1",
     "swagger-ui-express": "^4.6.0",
     "winston": "^3.8.2"
   },
@@ -39,6 +40,7 @@
     "@types/jest": "^29.2.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
+    "@types/selenium-webdriver": "^4.1.9",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.3.1",
